--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-rename": "~0.0.2",
     "q": "~0.9.2"
   }
 }
