--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "BSD",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "q": "~0.9.2"
+    "grunt": "0.4.1",
+    "grunt-contrib-clean": "0.4.0",
+    "q": "0.9.2"
   }
 }
