--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "grunt-contrib-clean": "0.4.0",
     "grunt-gh-pages": "0.6.0",
     "q": "0.9.2"
+  },
+  "scripts": {
+    "deploy": "grunt"
   }
 }
