--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt": "0.4.1",
     "grunt-contrib-clean": "0.4.0",
     "grunt-gh-pages": "0.6.0",
-    "q": "0.9.2"
+    "q": "0.9.2",
+    "grunt-cli": "0.1.9"
   },
   "scripts": {
     "deploy": "grunt"
