--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "grunt-contrib-clean": "0.4.0",
     "grunt-gh-pages": "0.6.0",
     "q": "0.9.2",
-    "grunt-cli": "0.1.9"
+    "grunt-cli": "0.1.9",
+    "bower": "1.0.3"
   },
   "scripts": {
     "deploy": "grunt",
-    "post-install": "bower install"
+    "postinstall": "bower install"
   }
 }
