--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "grunt-gh-pages": "0.6.0",
     "q": "0.9.2",
     "grunt-cli": "0.1.9",
-    "bower": "1.0.3"
+    "bower": "1.1.0",
+    "grunt-contrib-less": "0.6.4",
+    "assemble": "0.4.3",
+    "grunt-contrib-watch": "0.5.1",
+    "grunt-contrib-copy": "0.4.1"
   },
   "scripts": {
     "deploy": "grunt",
