--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-contrib-clean": "0.4.0",
-    "grunt-gh-pages": "0.6.0",
+    "grunt-gh-pages": "0.7.0",
     "q": "0.9.2",
     "grunt-cli": "0.1.9",
     "bower": "1.1.0",
@@ -26,8 +26,8 @@
   },
   "scripts": {
     "postinstall": "bower install",
-    "start": "grunt start",
-    "build": "grunt build",
-    "deploy": "grunt"
+    "start": "grunt start --treeish 'origin/master'",
+    "build": "grunt build --treeish 'origin/master'",
+    "deploy": "grunt deploy --treeish 'origin/master'"
   }
 }
