--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "grunt-gh-pages": "0.7.0",
     "q": "0.9.2",
     "grunt-cli": "0.1.9",
-    "bower": "1.1.0",
+    "bower": "1.2.6",
     "grunt-contrib-less": "0.6.4",
-    "assemble": "0.4.3",
+    "assemble": "0.4.7",
     "grunt-contrib-watch": "0.5.1",
     "grunt-contrib-copy": "0.4.1",
     "grunt-contrib-uglify": "0.2.2",
     "grunt-contrib-connect": "0.3.0",
-    "grunt-concurrent": "0.3.0",
-    "grunt-openlayers": "0.2.0"
+    "grunt-concurrent": "0.3.0"
   },
   "scripts": {
     "postinstall": "bower install",
