Remove temporary `npm run deploy-vector-api` command

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "postinstall": "bower install",
     "start": "grunt start --treeish 'origin/master'",
     "build": "grunt build --treeish 'origin/master'",
-    "deploy": "grunt deploy --treeish 'origin/master'",
-    "deploy-vector-api": "grunt deploy --treeish 'origin/vector-api'"
+    "deploy": "grunt deploy --treeish 'origin/master'"
   }
 }
